[metadata]
name = solaredge_modbus
version = 0.8.0EZ
author = nmakel, herbi3, EdwinGH
description = SolarEdge Modbus parser library (extended for battery)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/EdwinGH/solaredge_modbus
project_urls =
    Issue Tracker = https://github.com/EdwinGH/solaredge_modbus/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    pymodbus >= 3.5.0
    pyserial-asyncio >= 0.6.0

[options.packages.find]
where = src
